# python-basic-demo

./: .gitignore  README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  items_views.py  pyproject.toml
homework_03/newapp/: main.py
homework_03/newapp/users/: crud.py  dependencies.py  schemas.py  views.py
