[tool.poetry]
name = "hw3"
version = "0.1.0"
description = ""
authors = ["benderprog <bender_prog@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
ruff = "^0.0.265"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
